--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#fff</color>
+    <color name="colorPrimaryDark">#eceff1</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="numbers_background">#eceff1</color>
+    <color name="color_numbers">#757575</color>
+    <color name="numbers_red">#ff8a65</color>
+    <color name="blue_numbers">#2196F3</color>
+    <color name="blue_numbers_bg">#64b5f6</color>
 </resources>
