--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
                 android:layout_height="match_parent"
                 android:text="C"
                 android:textColor="@color/numbers_red"
-                android:textSize="30sp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
@@ -75,7 +75,7 @@
                 android:layout_height="match_parent"
                 android:text="( )"
                 android:textColor="@color/blue_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"                />
 
             <Button
@@ -86,7 +86,7 @@
                 android:layout_height="match_parent"
                 android:text="%"
                 android:textColor="@color/blue_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -100,7 +100,7 @@
                 android:layout_height="match_parent"
                 android:text="\u00F7"
                 android:textColor="@color/blue_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -125,7 +125,7 @@
                 android:layout_height="match_parent"
                 android:text="7"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
@@ -137,7 +137,7 @@
                 android:layout_height="match_parent"
                 android:text="8"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -149,7 +149,7 @@
                 android:layout_height="match_parent"
                 android:text="9"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -161,7 +161,7 @@
                 android:layout_height="match_parent"
                 android:text="\u00D7"
                 android:textColor="@color/blue_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -175,7 +175,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".4"
-            android:textSize="30dp"
+            android:textSize="@dimen/text_size"
             >
 
             <Button
@@ -186,7 +186,7 @@
                 android:layout_height="match_parent"
                 android:text="4"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
@@ -198,7 +198,7 @@
                 android:layout_height="match_parent"
                 android:text="5"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
@@ -210,7 +210,7 @@
                 android:layout_height="match_parent"
                 android:text="6"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -223,7 +223,7 @@
                 android:layout_height="match_parent"
                 android:text="\u207B"
                 android:textColor="@color/blue_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -248,7 +248,7 @@
                 android:layout_weight=".25"
                 android:text="1"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -260,7 +260,7 @@
                 android:layout_height="match_parent"
                 android:text="2"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -272,7 +272,7 @@
                 android:layout_height="match_parent"
                 android:text="3"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -285,7 +285,7 @@
                 android:layout_height="match_parent"
                 android:text="+"
                 android:textColor="@color/blue_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:textStyle="normal"
                 android:typeface="sans"
                 />
@@ -308,7 +308,7 @@
                 android:layout_height="match_parent"
                 android:text="\u207A/\u208B"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
@@ -322,7 +322,7 @@
                 android:layout_height="match_parent"
                 android:text="0"
                 android:textColor="@color/color_numbers"
-                android:textSize="30dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
                 />
 
@@ -334,7 +334,7 @@
                 android:layout_height="match_parent"
                 android:text="\u2219"
                 android:textColor="@color/color_numbers"
-                android:textSize="50dp"
+                android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
@@ -347,7 +347,7 @@
                 android:layout_height="match_parent"
                 android:text="\u003D"
                 android:textColor="@color/numbers_background"
-                android:textSize="50sp"
+                android:textSize="@dimen/text_size"
                 android:layout_gravity="center"
                 android:typeface="sans"
                 />
