--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nyc.c4q.calculator.MainActivity"
     android:background="#fff"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context="nyc.c4q.calculator.MainActivity">
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/numbers_background"
         android:layout_gravity="center_horizontal"
-        >
+        android:layout_weight="1"
+        android:background="@color/numbers_background">
+
         <TextView
-            android:id="@+id/text"
-            android:textColor="#212121"
+            android:id="@+id/display"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="50sp"
-            android:paddingLeft="20dp"
+            android:layout_gravity="center_vertical"
             android:background="@color/numbers_background"
             android:freezesText="true"
-            android:layout_gravity="center_vertical"
-            android:hint="|"
             android:gravity="end"
+            android:hint="|"
+            android:paddingLeft="20dp"
             android:paddingRight="10dp"
-            />
+            android:textColor="#212121"
+            android:textSize="50sp" />
     </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical"
         android:layout_gravity="center"
+        android:layout_weight="2"
         android:background="@color/colorPrimary"
-        >
-
-
+        android:orientation="vertical">
 
 
         <LinearLayout
             android:id="@+id/numbers4"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".4"
-            >
+            android:gravity="center">
 
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/clear"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="C"
                 android:textColor="@color/numbers_red"
                 android:textSize="@dimen/text_size"
@@ -68,102 +61,95 @@
                 />
 
             <Button
-                android:background="@drawable/roundedbutton"
-                android:id="@+id/parenthesis"
+                android:id="@+id/openParenthesis"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
-                android:text="( )"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
+                android:text="("
                 android:textColor="@color/blue_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"                />
+                android:typeface="sans" />
 
             <Button
-                android:background="@drawable/roundedbutton"
-                android:id="@+id/percentage"
+                android:id="@+id/closeParenthesis"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
-                android:text="%"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
+                android:text=")"
                 android:textColor="@color/blue_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
-
+                android:typeface="sans" />
 
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/division"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="\u00F7"
                 android:textColor="@color/blue_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
-
+                android:typeface="sans" />
 
 
         </LinearLayout>
 
 
-
         <LinearLayout
             android:id="@+id/numbers3"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".4"
-            >
+            android:gravity="center">
+
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/seven"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="7"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
+
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/eight"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="8"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/nine"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="9"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/times"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="\u00D7"
                 android:textColor="@color/blue_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
 
         </LinearLayout>
@@ -171,64 +157,62 @@
 
         <LinearLayout
             android:id="@+id/numbers2"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".4"
-            android:textSize="@dimen/text_size"
-            >
+            android:gravity="center"
+            android:textSize="@dimen/text_size">
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/four"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="4"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
+
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/five"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="5"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
                 android:typeface="sans"
 
                 />
+
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/six"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="6"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
 
             <Button
-                android:background="@drawable/roundedbutton"
-                android:id="@+id/rest"
+                android:id="@+id/minus"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="\u207B"
                 android:textColor="@color/blue_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
         </LinearLayout>
-
 
 
         <LinearLayout
@@ -237,75 +221,70 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".4"
-            android:gravity="center"
-            >
+            android:gravity="center">
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/one"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="1"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/two"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="2"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/three"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="3"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/plus"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="+"
                 android:textColor="@color/blue_numbers"
                 android:textSize="@dimen/text_size"
                 android:textStyle="normal"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/numbers5"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".4"
-            >
+            android:gravity="center">
+
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/make_negative"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="\u207A/\u208B"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
@@ -315,23 +294,22 @@
 
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/zero"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="0"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
             <Button
-                android:background="@drawable/roundedbutton"
                 android:id="@+id/dot"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_weight=".25"
+                android:background="@drawable/roundedbutton"
                 android:text="\u2219"
                 android:textColor="@color/color_numbers"
                 android:textSize="@dimen/text_size"
@@ -340,17 +318,16 @@
                 />
 
             <Button
-                android:background="@color/blue_numbers_bg"
                 android:id="@+id/equals"
                 android:layout_width="0dp"
-                android:layout_weight=".25"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight=".25"
+                android:background="@color/blue_numbers_bg"
                 android:text="\u003D"
                 android:textColor="@color/numbers_background"
                 android:textSize="@dimen/text_size"
-                android:layout_gravity="center"
-                android:typeface="sans"
-                />
+                android:typeface="sans" />
 
 
         </LinearLayout>
