--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center_horizontal"
         >
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/textResult"
             android:textColor="#212121"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -217,7 +217,7 @@
 
             <Button
                 android:background="@drawable/roundedbutton"
-                android:id="@+id/rest"
+                android:id="@+id/subtract"
                 android:layout_width="0dp"
                 android:layout_weight=".25"
                 android:layout_height="match_parent"
