--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -394,12 +394,12 @@
 
 
                 <Button
+                    android:id="@+id/ans"
                     android:background="@drawable/roundedbutton2"
-                    android:id="@+id/rad"
                     android:layout_width="0dp"
                     android:layout_weight=".25"
                     android:layout_height="match_parent"
-                    android:text="RAD"
+                    android:text="Ans( )"
                     android:textColor="@color/color_numbers"
                     android:textSize="@dimen/text_size"
                     android:typeface="sans"
